--- a/new2.css
+++ b/new2.css
@@ -21,41 +21,33 @@
     color: 	#666;
 }
 .pic2{
-    display: inline;
+    display: inline-block;
     margin-top:10px;
     min-height: 60vh;
     width:70%;
 }
-.pic2 .pic2-sec1{
-    margin-top: 20px;
-    
-}
-.pic2 .pic2-sec2{
-    margin-top: 20px;
-    
-}
 .pic2 .aka2 {
     margin-left:50px;
     margin-right: 20px;
-    width: 300px;
+    width: 33%;
     height: 30vh;
 }
 .pic2 .aka3{
     margin-left:50px;
     margin-right: 30px;
-    width:300px;
+    width:33%;
     height:30vh;
 }
 .pic2 .ichi1{
     margin-left:50px;
     margin-right: 20px;
-    width:300px;
+    width:33%;
     height:30vh;
 }
 .pic2 .sister1{
     margin-left:50px;
     margin-right: 20px;
-    width:300px;
+    width:33%;
     height:30vh;
 }
 .pic3{
@@ -70,7 +62,7 @@
 .pic3 .pic3-1{
     height:60vh;
     width:300px;
-    margin-top: 35px;
+    margin-top: 10px;
 }
 .last{
     display: flex;
