--- a/new.css
+++ b/new.css
@@ -159,6 +159,9 @@ form.example input[type=text] {
 .register .register-input1{
     width: 60%;
 }
+.register .register-input4{
+    width: 60%;
+}
 .register .register-input2{
     width: 60%;
 }
